# embedded-stemma-soil-sensor

./: Cargo.toml  LICENCE.md  README.md
.cargo/: config.toml
src/: lib.rs  regs.rs
