[package]
name = "stemma_soil_sensor"
version = "0.1.0"
authors = ["Carl Fredrik Samson <cf@samson.no>"]
description = "Library for reading data from Adafruit STEMMA Soil Sensor"
repository = "https://github.com/cfsamson/embedded-stemma-soil-sensor"
documentation = "https://docs.rs/stemma_soil_sensor"
license = "MIT"
readme = "README.md"
categories = ["embedded"]
keywords = ["stemma", "adafruit", "sensor", "moisture", "soil"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = {version = "0.11.3", features = ["hal"]}
embedded-hal = "0.2.4"
log = "0.4.11"
thiserror = "1.0.20"
